# TR

./: LEEME.md  TODO-PROYECTO-ORQUESTACION-DINAMICA.md  TODO-RAG-GRAFICO-SQLITE-VECTORIAL.md  TODO.md  dont-touch-my-eggs.md  main.py  pyproject.toml
Docs/: Controlar a Kitty desde scripts (1).md  Documento de Inicio.md
assets/: arte tron ares ascii.txt
config/: 13-03-2026-11-35-am-old-layout_config.yaml  13-03-2026-11-55-am-old-V27.yaml  __init__.py  config.py  config.yaml  cosaBuena-13-03-2026-04-15-pm-old.yaml  cosaBuena-13-03-2026-11-15-am-old.yaml  kitty-minimal.conf  kitty.conf  kitty_remote.py  layout_config.yaml  notcurses_test_config.yaml
data/: handshake
db/: Construccion-Ares.json  ares_help.yaml  avisos.db  diaria.json  diaria.json.bak  last_session.json  list.json  test_session.json  ultima.json
docs/: 100-PASOS-SIGUIENTES.md  COLOR_SYSTEM.md  DEEPSEEK_API_KEY_SETUP.md  EMOJIS-PNG-INVENTARIO.md  FASE0-COMPLETADA-APOLLO-DB.md  GEMINI.cli  GEMMA_OLLAMA_GUIDE.md  HELP.md  INDEX-MODULES.md  INDEX-TESTS.md  INDEX.md  INFORME-TECNICO-ARQUITECTURA-RAG-HIBRIDA-ULTRALIGERA-DE-ALTA-EFICACIA.md  KITTY_INIT.md  MANUAL.md  MODELOS-ARES.md  Notcurses-INSIGHTS-14-03-2026.md  PENDIENTES-FASE3.md  QWEN.md  RECOMENDACIONES-OLLAMA-MODELFILE-VARIABLES-ENTORNO-POR-MODELO.md  RESUMEN-TRABAJO-2026-03-09.md  Shortcuts.md  TEST_COMMANDS.md  ZSH_WOW_CHEAT_SHEET.md  modulo-colores-y-diseno.md  sacar-jugo-gemma.md
logs/: validacion_experimental.json
modules/: __init__.py
papelera/: GEMINI.cli  atajos-OP.md  autostart_success.txt  aviso_debug.txt  i_cmd_new.py  pruebas.txt  (+5 more)
(+1014 files in other folders)
