[project]
name = "tr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.4",
    "click>=8.3.1",
    "ollama>=0.6.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "sqlite-vec>=0.1.6",
    "term-image>=0.7.2",
    # notcurses: Usar paquete del sistema (python3-notcurses)
    # No instalar desde PyPI porque no es compatible con libnotcurses del sistema
]

[tool.uv]
# System package: python3-notcurses (APT)
# El wrapper Python oficial tiene problemas de compilación con la versión del sistema
